Kubernetes_03/modulo-3-avancado/04-rbac.yaml
# PARTE 6: Pod usando o ServiceAccount

apiVersion: v1
kind: Pod

metadata:
  name: pod-com-rbac
  labels:
    app: com-rbac

spec:
  serviceAccountName: sa-minha-app    # USA o ServiceAccount criado!
                                      # Se não especificar: usa "default"

  containers:
    - name: app
      image: nginx:1.25

# ============================================================
# ENTREVISTA SÊNIOR:
# "Qual o princípio de segurança por trás do RBAC?"
# RESPOSTA: Principle of Least Privilege (menor privilégio).
# Cada app/usuário tem APENAS as permissões que precisa.
# Nada a mais. Isso limita o impacto de um pod comprometido.
#
# "Como verificar as permissões de um ServiceAccount?"
# kubectl auth can-i list pods --as=system:serviceaccount:default:sa-minha-app
# ============================================================
